--- a/app/src/main/res/layout/custom_view.xml
+++ b/app/src/main/res/layout/custom_view.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toEndOf="@id/cbStatus"
+
             app:layout_constraintTop_toTopOf="@id/cbStatus"
             app:layout_constraintBottom_toBottomOf="@id/cbStatus"/>
         <TextView
@@ -47,6 +48,23 @@
             app:layout_constraintStart_toEndOf="@id/tvId"
             app:layout_constraintTop_toTopOf="@id/cbStatus"
             app:layout_constraintBottom_toBottomOf="@id/cbStatus"
+            app:layout_constraintEnd_toStartOf="@id/btn_delete"
+            />
+        <ImageButton
+            android:id="@+id/btn_delete"
+            android:src="@drawable/ic_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+        <ImageButton
+            android:id="@+id/btn_edit"
+            android:src="@drawable/ic_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/btn_delete"
+            app:layout_constraintEnd_toEndOf="parent"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
