--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,52 @@
     android:id="@+id/rootLayout"
     tools:context=".MainActivity"
     android:background="#fdfdfc">
+    <LinearLayout
+        android:id="@+id/fild_for_btns"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal">
+    <Button
+        android:id="@+id/btn_all"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Все"
+        android:layout_margin="4dp"
+        android:layout_weight="1"/>
+        <Button
+            android:id="@+id/btn_active"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="В работе"
+            android:layout_margin="4dp"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/btn_complete"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="Готово"
+            android:layout_margin="4dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fild_for_btns"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn"
+        tools:listitem="@layout/custom_view"/>
     <Button
         android:text="Добавить"
         android:layout_width="wrap_content"
@@ -19,18 +65,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn"
-        tools:listitem="@layout/custom_view"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
