--- a/app/src/main/res/layout/custom_view.xml
+++ b/app/src/main/res/layout/custom_view.xml
@@ -15,6 +15,7 @@
 
         <CheckBox
             android:id="@+id/cbStatus"
+            android:checked="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
